Add lasagna recipee

--- a/index.html
+++ b/index.html
@@ -6,5 +6,10 @@
 </head>
 <body>
     <h1>Odin Recipee</h1>
+    <hr>
+    <h2>Italian recipees</h2>
+    <ul>
+        <li><a href="./lasagna.html">Lasagna</a></li>
+    </ul>
 </body>
 </html>
