Add Aloo Curry recipe page

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h2>Italian recipees</h2>
     <ul>
         <li><a href="./lasagna.html">Lasagna</a></li>
+        <li><a href="./aloo-curry.html">Aloo Curry</a></li>
     </ul>
 </body>
 </html>
