Add CSS styling to the site
- Basic background color
- Different fonts for ingredients and instructions
- Apply style to lasagna and aloo recipe

--- a/aloo-curry.html
+++ b/aloo-curry.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="./style/styles.css">
         <title>Aloo Curry Recipee</title>
     </head>
     <body>
